--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -130,7 +130,7 @@
             <a href="topicos" class="slider-card">
 
               <figure class="slider-banner img-holder" style="--width: 507; --height: 618;">
-                <img src="./assets/images/topic-1.png" width="507" height="618" loading="lazy" alt="JavaScript"
+                <img src="/img/javass.png" width="507" height="618" loading="lazy" alt="JavaScript"
                   class="img-cover">
               </figure>
 
@@ -147,7 +147,7 @@
             <a href="topicos" class="slider-card">
 
               <figure class="slider-banner img-holder" style="--width: 507; --height: 618;">
-                <img src="./assets/images/topic-2.png" width="507" height="618" loading="lazy" alt="Java"
+                <img src="/img/java.jpg" width="507" height="618" loading="lazy" alt="Java"
                   class="img-cover">
               </figure>
 
@@ -164,7 +164,7 @@
             <a href="topicos" class="slider-card">
 
               <figure class="slider-banner img-holder" style="--width: 507; --height: 618;">
-                <img src="./assets/images/topic-3.png" width="507" height="618" loading="lazy" alt="Frameworks"
+                <img src="/img/framworks-post.jpg" width="507" height="618" loading="lazy" alt="Frameworks"
                   class="img-cover">
               </figure>
 
@@ -181,7 +181,7 @@
             <a href="topicos" class="slider-card">
 
               <figure class="slider-banner img-holder" style="--width: 507; --height: 618;">
-                <img src="./assets/images/topic-4.png" width="507" height="618" loading="lazy" alt="Wordpress"
+                <img src="/img/wp.png" width="507" height="618" loading="lazy" alt="Wordpress"
                   class="img-cover">
               </figure>
 
@@ -198,7 +198,7 @@
             <a href="topicos" class="slider-card">
 
               <figure class="slider-banner img-holder" style="--width: 507; --height: 618;">
-                <img src="./assets/images/topic-5.png" width="507" height="618" loading="lazy" alt="Lifestyle"
+                <img src="/img/ia.jpg" width="507" height="618" loading="lazy" alt="Lifestyle"
                   class="img-cover">
               </figure>
 
