--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -2,7 +2,7 @@
   
 </article>
 
-<section class="hero" id="home" aria-label="home">
+<section class="hero" id="" aria-label="">
   <div class="container">
 
     <div class="hero-content">
@@ -49,7 +49,7 @@
     <ul class="link-list">
 
       <li>
-        <a href="#" class="navbar-bottom-link hover-1">Perfil</a>
+        <a href="profile" class="navbar-bottom-link hover-1">Perfil</a>
       </li>
 
       <li>
