--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -1,4 +1,5 @@
 <article>
+<div class="art-item"></div>
 
     <h2>Sobre o <span id="siteName">Site</span></h2>
     <p><strong>Somos uma equipe pequena, mas focada e altamente especializada. <em>Os melhores dos
@@ -32,7 +33,7 @@
     </p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt illo cum rerum fuga soluta corporis, tenetur
         nemo iure suscipit. Animi quibusdam accusamus quis beatae dicta, commodi libero dolorem quos iusto.</p>
-
+    </div>
 </article>
 
 <aside>
