--- a/pages/contacts/index.html
+++ b/pages/contacts/index.html
@@ -1,12 +1,10 @@
 <article>
-  <link rel="stylesheet" href="index.css">
-    <title>Chatbot- devSocial</title>
-  </head>
-  <body>
+  <div class="hero-content">
+    <h1 class="headline headline-1 section-title">
+      Chat <span class="span">Bot!</span>
+    </h1>
+  </div>
     <div class="box-questions">
-      <div class="header">
-        <p>Chatbot- devSocial</p>
-      </div>
       <p id="status"></p>
       <div id="history">
         <!-- Aqui vai o chat gerado conforme as respostas -->
@@ -16,9 +14,6 @@
         <button class="btn-submit" id="btn-submit" onclick="sendMessage()">Enviar</button>
       </div>
     </div>
-  </body>
-  <script src="index.js"></script>
-  </html>
 </article>
     
     
