--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               </div>
               <ul class="link-list">
                 <li>
-                  <a href="#" class="navbar-bottom-link hover-1">Perfil</a>
+                  <a href="profile" class="navbar-bottom-link hover-1">Perfil</a>
                 </li>
     
                 <li>
