--- a/pages/chat/index.html
+++ b/pages/chat/index.html
@@ -1,22 +1,9 @@
 <article>
-  <div class="outra">
-    <div class="outra__top">
-      <input type="text" placeholder="Adicione um contato" />
-    </div>
-    <div class="outra__icon">
-      <i class="fas fa-user-friends fa-lg"></i>
-      <span>Contatos</span>
-    </div>
-    <div class="outra__icon">
-      <i class="fas fa-compact-disc fa-lg"></i>
-      <span></span>
-    </div>
+  <div class="outra">    
     <div class="outra__users">
-      <div class="outra__usersHeader">
-        <div class="outra__header">
-          <h4>Mensagens</h4>
+      <div class="outra__usersHeade">
+        <div class="outra__header"> <h4> Mensagens </h4>  
         </div>
-        <i class="fas fa-envelope outra__addUser"></i>
       </div>
       <div>
         <div class="app-body-tabs-head">
@@ -47,13 +34,9 @@
       <div class="chatHeader">
         <div class="chatHeader__left">
           <span class="chatHeader__Dm">@</span>
-          <h3>Edinaldo</h3>
+          <h3 class="nomeCont">Edinaldo</h3>
         </div>
         <div class="chatHeader__right">
-          <i class="fas fa-phone-volume fa-lg"></i>
-          <i class="fas fa-video fa-lg"></i>
-          <i class="fas fa-user-plus fa-lg"></i>
-
           <form id="mens" class="search">
             <input type="text" placeholder="Pesquise" id="qqcoisa" />
             <button
