--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div id="wrap">
       <header class="header" data-header>
         <div class="container">
-          <a href="#" class="logo">
-            <img src="img/logo.png" width="119" height="37" alt="Wren logo">
+          <a href="home" class="logo">
+            <img class="a" src="img/Capturar (2).png" width="119" height="37" alt="Nossa logo">
           </a>
           <nav class="navbar" data-navbar>
             <div class="navbar-top">
@@ -33,7 +33,7 @@
                 <a href="home" class="navbar-link hover-1" data-nav-toggler>Home</a>
               </li>
               <li>
-                <a href="contacts" class="navbar-link hover-1" data-nav-toggler>Chatbot</a>
+                <a href="Chatbot" class="navbar-link hover-1" data-nav-toggler>Chatbot</a>
               </li>
               <li>
                 <a href="about" class="navbar-link hover-1" data-nav-toggler>Sobre</a>
@@ -42,7 +42,10 @@
                 <a href="chat" class="navbar-link hover-1" data-nav-toggler>Chat</a>
               </li>
               <li>
-                <a href="#" class="navbar-link hover-1" data-nav-toggler>Contact</a>
+                <a href="contact" class="navbar-link hover-1" data-nav-toggler>Contate-nos</a>
+              </li>
+              <li>
+                <a href="https://documentacao-projeto-integrador.vercel.app/" class="navbar-link hover-1" data-nav-toggler>Documentação</a>
               </li>
             </ul>
             <div class="navbar-bottom">
