--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" description="JavaScript, HTML5, CSS3, semântica, mobile-first, responsividade, api, rest">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="" id="pageCSS">
-    <link rel="shortcut icon" href="img/favicon.alfa.png">
+    <link rel="shortcut icon" href="img/Capturar (2).png">
     <title>devSocial</title>
 </head>
 <body id="top">
@@ -39,7 +39,7 @@
                 <a href="about" class="navbar-link hover-1" data-nav-toggler>Sobre</a>
               </li>
               <li>
-                <a href="chat" class="navbar-link hover-1" data-nav-toggler>Chat</a>
+                <a href="http://localhost:8080/" class="navbar-link hover-1" data-nav-toggler>Chat</a>
               </li>
               <li>
                 <a href="contact" class="navbar-link hover-1" data-nav-toggler>Contate-nos</a>
