--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -1,12 +1,8 @@
 <article>
 <div class="art-item"></div>
-
+<h2>aaa</h2>
     <h2>Sobre o <span id="siteName">Site</span></h2>
-    <p><strong>Somos uma equipe pequena, mas focada e altamente especializada. <em>Os melhores dos
-                melhores!</em></strong></p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum molestias corrupti modi nemo explicabo, quia minus
-        laborum et repellendus saepe quam ab totam eius. Soluta accusamus ducimus deleniti quaerat tempora.</p>
-
+    <p><strong>Somos uma equipe pequena, mas focada.</strong></p>
     <h3>Nosso time</h3>
 
     <div id="usersGrid">
@@ -16,23 +12,13 @@
     </div>
 
     <h3>Nosso objetivo</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, sit. Fugiat voluptate distinctio ad,
-        necessitatibus doloremque nobis repudiandae, dicta, vitae pariatur odit quam quos consectetur perspiciatis!
-        Delectus vel neque illum.</p>
+    <p></p>
 
     <h3>Projetos em Destaque</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor illum sequi nisi doloremque suscipit. Velit
-        excepturi aperiam rerum quisquam cum nesciunt, repellat ipsam itaque perspiciatis sed placeat corporis dolorum
-        sunt.</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente, non inventore. Doloribus error delectus a
-        iste odit officiis ab eos, voluptas esse porro, rem quia facere soluta minus modi unde!</p>
+    <p>Bem-vindo(a) à nossa rede social para programadores! Nosso objetivo é criar uma plataforma dinâmica e colaborativa, especialmente projetada para conectar programadores de todas as habilidades e níveis de experiência. Queremos proporcionar um ambiente acolhedor e inspirador, onde os membros possam compartilhar conhecimentos, trocar ideias, colaborar em projetos e aprender uns com os outros.</p>
+    <p>Nossa rede social para programadores também será um espaço para manter-se atualizado com as últimas tendências, tecnologias e ferramentas no mundo da programação. Ofereceremos recursos educacionais, artigos informativos, tutoriais em vídeo e webinars conduzidos por especialistas, para que todos os membros possam continuar aprimorando suas habilidades e se manterem competitivos no mercado.</p>
 
-    <h3>Clientes e Parceiros</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, quidem! Nemo, nulla corporis ducimus accusantium,
-        inventore et ipsum dolorem in velit nesciunt sed architecto error voluptatibus cum ullam aspernatur excepturi?
-    </p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt illo cum rerum fuga soluta corporis, tenetur
-        nemo iure suscipit. Animi quibusdam accusamus quis beatae dicta, commodi libero dolorem quos iusto.</p>
+    
     </div>
 </article>
 
