--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -11,17 +11,17 @@
       </h1>
 
       <p class="hero-text">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis, dignissimos voluptas. Nemo, quam quisquam autem deleniti quis, voluptatibus totam obcaecati dolorum repudiandae ad quae aliquam omnis quibusdam, possimus explicabo alias!
+       Somos a devSocial, uma Rede social para devs, onde você pode encontrar artigos sobre programção, um chatbot para tirar duvidas, e interagir com outros devs em nosso site em tempo real
       </p>
     </div>
 
     <div class="hero-banner">
 
-      <img src="/img/dev.png" width="327" height="490" alt="Wren Clark" class="w-100">
+      <img src="/img/dev.png" width="327" height="490" alt="Foto de dev" class="w-100">
 
-      <img src="/img/javvvv.png" width="27" height="26" alt="shape" class="shape shape-1">
+      <img src="/img/javvvv.png" width="27" height="26" alt="Java" class="shape shape-1">
 
-      <img src="/img/dev.png" width="27" height="26" alt="shape" class="shape shape-2">
+      <img src="/img/dev.png" width="27" height="26" alt="Foto de dev" class="shape shape-2">
 
     </div>
 
